Assignment-02/.nbgrader.log
[NotebookApp | ERROR] Exception while loading config file /etc/jupyter/nbgrader_config.py
    Traceback (most recent call last):
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/application.py", line 562, in _load_config_files
        config = loader.load_config()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 457, in load_config
        self._read_file_as_dict()
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/traitlets/config/loader.py", line 489, in _read_file_as_dict
        py3compat.execfile(conf_filename, namespace)
      File "/home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/ipython_genutils/py3compat.py", line 198, in execfile
        exec(compiler(f.read(), fname, 'exec'), glob, loc)
      File "/etc/jupyter/nbgrader_config.py", line 29
        "C++14": "// your code here\nthrow new Error();"
               ^
    SyntaxError: invalid syntax
[NotebookApp | INFO] Loading the validate_assignment nbgrader serverextension
[NotebookApp | INFO] nteract extension loaded from /home/hp/workfolder/python/anaconda3/lib/python3.6/site-packages/nteract_on_jupyter
[NotebookApp | INFO] Serving notebooks from local directory: /home/hp/workfolder/simplilearn/simplilearn-AI-masters/Assignment-02
[NotebookApp | INFO] The Jupyter Notebook is running at:
[NotebookApp | INFO] http://localhost:8888/?token=1190ce1831dde10e75c6f38ed3a5e464d50f28d77d165921
[NotebookApp | INFO] Use Control-C to stop this server and shut down all kernels (twice to skip confirmation).
[NotebookApp | CRITICAL] 
    
    Copy/paste this URL into your browser when you connect for the first time,
    to login with a token:
        http://localhost:8888/?token=1190ce1831dde10e75c6f38ed3a5e464d50f28d77d165921
[NotebookApp | INFO] Accepting one-time-token-authenticated connection from 127.0.0.1
[NotebookApp | WARNING] Notebook Assignment 02.ipynb is not trusted
[NotebookApp | INFO] Kernel started: 9bc3e577-19f5-4dbe-a466-ab2554b7e834
[NotebookApp | INFO] Adapting to protocol v5.1 for kernel 9bc3e577-19f5-4dbe-a466-ab2554b7e834
[NotebookApp | WARNING] 400 GET /api/contents/Olympic%202012%20Medal%20Tally/Olympic%202012%20Medal%20Tally.xlsx?type=file&format=text&_=1546145930476 (127.0.0.1): /home/hp/workfolder/simplilearn/simplilearn-AI-masters/Assignment-02/Olympic 2012 Medal Tally/Olympic 2012 Medal Tally.xlsx is not UTF-8 encoded
[NotebookApp | WARNING] /home/hp/workfolder/simplilearn/simplilearn-AI-masters/Assignment-02/Olympic 2012 Medal Tally/Olympic 2012 Medal Tally.xlsx is not UTF-8 encoded
[NotebookApp | WARNING] 400 GET /api/contents/Olympic%202012%20Medal%20Tally/Olympic%202012%20Medal%20Tally.xlsx?type=file&format=text&_=1546145930476 (127.0.0.1) 1.43ms referer=http://localhost:8888/edit/Olympic%202012%20Medal%20Tally/Olympic%202012%20Medal%20Tally.xlsx
[NotebookApp | WARNING] 400 GET /api/contents/Olympic%202012%20Medal%20Tally/Olympic%202012%20Medal%20Tally.xlsx?type=file&format=text&_=1546145981101 (127.0.0.1): /home/hp/workfolder/simplilearn/simplilearn-AI-masters/Assignment-02/Olympic 2012 Medal Tally/Olympic 2012 Medal Tally.xlsx is not UTF-8 encoded
[NotebookApp | WARNING] /home/hp/workfolder/simplilearn/simplilearn-AI-masters/Assignment-02/Olympic 2012 Medal Tally/Olympic 2012 Medal Tally.xlsx is not UTF-8 encoded
[NotebookApp | WARNING] 400 GET /api/contents/Olympic%202012%20Medal%20Tally/Olympic%202012%20Medal%20Tally.xlsx?type=file&format=text&_=1546145981101 (127.0.0.1) 3.85ms referer=http://localhost:8888/edit/Olympic%202012%20Medal%20Tally/Olympic%202012%20Medal%20Tally.xlsx
[NotebookApp | INFO] Saving file at /Assignment 02.ipynb
[NotebookApp | INFO] Saving file at /Assignment 02.ipynb
[NotebookApp | INFO] Saving file at /Assignment 02.ipynb
[NotebookApp | INFO] Saving file at /Assignment 02.ipynb
[NotebookApp | INFO] Saving file at /Assignment 02.ipynb
[NotebookApp | INFO] Saving file at /olympic_data.csv
[NotebookApp | INFO] Saving file at /Assignment 02.ipynb
[NotebookApp | INFO] Saving file at /Assignment 02.ipynb
[NotebookApp | INFO] Starting buffering for 9bc3e577-19f5-4dbe-a466-ab2554b7e834:7a796f2dc4f74e7a8f9660852be5e48a
[NotebookApp | INFO] interrupted
[NotebookApp | CRITICAL] Shutdown confirmed
[NotebookApp | INFO] Shutting down 1 kernel
[NotebookApp | INFO] Kernel shutdown: 9bc3e577-19f5-4dbe-a466-ab2554b7e834
